apps/data-petewall-net/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: data-petewall-net
  labels:
    istio-injection: enabled
