apps/data-petewall-net/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: data-petewall-net
  namespace: data-petewall-net
spec:
  type: ClusterIP
  selector:
    app: data-petewall-net
  ports:
    - name: http
      port: 80
      targetPort: http
