apps/data-petewall-net/virtual-service.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: data-petewall-net
  namespace: data-petewall-net
spec:
  hosts:
    - data.petewall.net
  gateways:
    - istio-system/data-petewall-net-gateway
  http:
    - route:
        - destination:
            host: data-petewall-net
            port:
              number: 80
